# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Api\AddressController;
 use App\Http\Controllers\Api\CategoryController;
 use App\Http\Controllers\Api\CartController;
+use App\Http\Controllers\Api\ProductController;
 
 // Public API routes
 
@@ -15,6 +16,9 @@ Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 Route::post('/forget-password', [AuthController::class, 'forgetPassword']);
 Route::post('/check-otp', [AuthController::class, 'checkOTP']);
+
+// Product Endpoints    
+Route::get('/products', [ProductController::class, 'products']);
 
 // categories routes
 Route::get('/categories', [CategoryController::class, 'categories']);
@@ -42,6 +46,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('/cart', [CartController::class, 'addProduct']);
     Route::put('/cart', [CartController::class, 'updateProductCount']);
     Route::delete('/cart', [CartController::class, 'deleteProduct']);
+
+
 
     // Orders (We will build the controller in Phase 4)
     // Route::get('/orders', [OrderController::class, 'index']);
